--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "apollo-server": "^2.18.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
-    "mongoose": "^5.10.11"
+    "graphql-tools": "^7.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.11",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
